--- a/src/app/paginas/dashboard/dashboard.component.html
+++ b/src/app/paginas/dashboard/dashboard.component.html
@@ -1,5 +1,4 @@
-<div class="container-fluid" style="background-color: #bcb1b4;">
-  <h2 class="h2">Bienvenido(a):{{nombre}}</h2>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repudiandae tempora soluta asperiores ipsa fugit illo vitae tempore culpa adipisci molestias?</p>
-  <img src="https://1.bp.blogspot.com/-67KDurfDBSg/T1AVRMOlYgI/AAAAAAAAAOQ/OWmzELJY_Pg/s1600/consultorio_medico.jpg" alt=""  class="img-fluid">
+<div class="container-fluid">
+  <img src="https://1.bp.blogspot.com/-67KDurfDBSg/T1AVRMOlYgI/AAAAAAAAAOQ/OWmzELJY_Pg/s1600/consultorio_medico.jpg"  class="img-fluid">
 </div>
+<footer style="background-color: black; color: beige;">Consultorio Medico 2023 Derechos Reservados</footer>
