--- a/src/app/paginas/salud/salud.component.html
+++ b/src/app/paginas/salud/salud.component.html
@@ -1,4 +1,4 @@
-<div class="container rounded">
+<div class="container rounded mt-3">
     <h2 class="h2">Datos Medicos</h2>
  <form class="was-validated" [formGroup]="Datos" (ngSubmit)="guardarDatos()">
     <!-- 2 column grid layout with text inputs for the first and last names -->
