--- a/src/app/paginas/consulta/consulta.component.html
+++ b/src/app/paginas/consulta/consulta.component.html
@@ -1,6 +1,14 @@
-<div class="container rounded">
+<div class="container rounded mt-3">
   <h2 class="h2">¿Hola como puedo ayudarte?</h2>
-  <p class="mt-3 fw-semibold">Describe tus sintomas en el cuadro de texto......</p>
+  <p>
+    Para encontrar el diagnostico de tu problema debe responder una serie de
+    preguntas que serviran para encontrar el resultado o resultados mas
+    coincidente a tu enfermedad recuerde que este programa es una herramienta de
+    acceso rapido pero debe consultar un medico para obtener un diagnostico mas
+    seguro
+  </p>
+  <p>Conteste el siguiente formulario Para Realizar el diagnostico</p>
+  <!-- <p class="mt-3 fw-semibold">Describe tus sintomas en el cuadro de texto......</p>
   <textarea class="form-control" #sintomas cols="10" rows="10"></textarea>
   <a class="btn btn-outline-success mt-3" (click)="consultarEnfermedades(sintomas)">
     <mat-icon class="d-inline-block align-text-top">send</mat-icon>
@@ -28,6 +36,269 @@
                 </tbody>
               </table>
         </div>
-    </div>
-</div>
+    </div> -->
 
+<form class="row row-cols-4" [formGroup]="FormDiagnostico">
+
+    <div class="col mb-3 border">
+      <label for="exampleDataList" class="form-label"
+        >¿Sufre dolor de Cabeza?</label
+      >
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="dolorC" formControlName="dolorC" value="Dolor de cabeza">
+        <label class="form-check-label">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="dolorC" formControlName="dolorC" value="-">
+        <label class="form-check-label">No</label>
+      </div>
+
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label"
+        >¿Sufre dolor de Garganta?</label
+      >
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="dolorG" formControlName="dolorG" value="Dolor de garganta">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="dolorG" formControlName="dolorG" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Sufre de Mareos?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="Mareos" formControlName="Mareos" value="Mareos">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="Mareos" formControlName="Mareos" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Presenta Fiebre?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="Fiebre" formControlName="Fiebre" value="Fiebre">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="Fiebre" formControlName="Fiebre" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Presenta algun tipo Tos?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="tos" formControlName="tos" value="Tos seca">
+        <label class="form-check-label" for="inlineRadio1">Tos Seca</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="tos" formControlName="tos" value="Tos con flemas">
+        <label class="form-check-label" for="inlineRadio2">Tos con flemas</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="tos" formControlName="tos" value="-">
+        <label class="form-check-label" for="inlineRadio2">Ninguno</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Tiene la Nariz Congestionada?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="narizTap" formControlName="narizTap" value="Congestion Nasal">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="narizTap" formControlName="narizTap" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Sufre algun tipo de dolor corporal?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="dolorCor" formControlName="dolorCor" value="Dolor corporal intenso">
+        <label class="form-check-label" for="inlineRadio1">Dolor corporal intenso(sentir que te duelen hasta los huesos)</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="dolorCor" formControlName="dolorCor" value="Dolor corporal">
+        <label class="form-check-label" for="inlineRadio2">Dolor corporal leve</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="dolorCor" formControlName="dolorCor" value="-">
+        <label class="form-check-label" for="inlineRadio2">Ninguno</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Sufre dolor en los ojos?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="dolorOc" formControlName="dolorOc" value="Dolor ocular">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="dolorOc" formControlName="dolorOc" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Tiene sarpullido en la piel?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="sarpullido" formControlName="sarpullido" value="Sarpullido">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="sarpullido" formControlName="sarpullido" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Presenta Diarrea?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="diarrea" formControlName="diarrea" value="Diarrea">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="diarrea" formControlName="diarrea" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Presenta Nauseas?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="nauseas" formControlName="nauseas" value="Nauseas">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="nauseas" formControlName="nauseas" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Ha tenido vomitos?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="vomito" formControlName="vomito" value="Vomito">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="vomito" formControlName="vomito" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Ha tenido reflujos estomacales?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="reflujo" formControlName="reflujo" value="Reflujo">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="reflujo" formControlName="reflujo" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Ha sufrido problemas para dormir?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="insomnio" formControlName="insomnio" value="Insomnio">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="insomnio" formControlName="insomnio" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿Presenta Cansancio o debilidad?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="cansancio" formControlName="cansancio" value="Cansancio">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="cansancio" formControlName="cansancio" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <div class="col mb-3 border" role="group">
+      <label for="exampleDataList" class="form-label">¿dificultad para respirar?</label>
+      <br />
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="hardtobreath" formControlName="hardtobreath" value="Dificultad para respirar">
+        <label class="form-check-label" for="inlineRadio1">Si</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input" type="radio" name="hardtobreath" formControlName="hardtobreath" value="-">
+        <label class="form-check-label" for="inlineRadio2">No</label>
+      </div>
+    </div>
+
+    <button type="button" class="btn btn-success sm" (click)="array()" data-bs-toggle="modal" data-bs-target="#staticBackdrop" >Enviar</button>
+  </form>
+
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog modal-xl">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="staticBackdropLabel">Resultado o Resultados</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p>seleccione la opcion que corresponda a sus sintomas si no sabe describir otros sintomas consultelos en los resultados</p>
+  <div  class="table-responsive">
+     <table class="table">
+         <thead>
+           <tr class="table-success">
+             <th>Diagnostico</th>
+             <th>Tratamiento</th>
+             <th>Sintomas</th>
+             <th>Acciones</th>
+           </tr>
+         </thead>
+         <tbody>
+           <tr *ngFor="let result of enfermedades">
+             <td ><input #diagnostico class="form-control border-0 transparent-input" value="{{result.nombre}}" disabled></td>
+             <td ><textarea value="{{result.tratamiento}}" #trata disabled></textarea></td>
+             <td >{{result.sintomas}}</td>
+             <td ><button class="btn btn-success" (click)="generarReceta(trata,diagnostico)" >Aceptar Diagnostico</button></td>
+           </tr>
+         </tbody>
+       </table>
+  </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<footer class="mt-3" style="background-color: black; color: beige;">Consultorio Medico 2023 Derechos Reservados</footer>
