--- a/src/app/paginas/perfil/perfil.component.html
+++ b/src/app/paginas/perfil/perfil.component.html
@@ -1,5 +1,5 @@
 
-<div class="container rounded bg-white">
+<div class="container rounded bg-white mt-3">
       <div class="row">
         <div class="col-md-3 border-right">
             <div class="d-flex flex-column align-items-center text-center p-3 py-5">
